Fixing weird gap that appeared between header and content.
git-svn-id: https://svn-1.prod.hosting.acquia.com/opensource/trunk@1090 ba871ea3-d002-4683-b738-bf6965e0a2a8

--- a/local/sites/all/themes/sitetheme/css/layout-fixed.css
+++ b/local/sites/all/themes/sitetheme/css/layout-fixed.css
@@ -142,14 +142,6 @@ body {
   margin-right: -760px; /* LTR */ /* Negative value of #content's width + left margin. */
 }
 
-#content-inner-side-shadow {
-  
-}
-
-#content-inner {
-  
-}
-
 /*
  * Navbar
  */
@@ -172,12 +164,6 @@ body {
 
 .with-channel-header #navbar {
   height: 149px;
-}
-
-.with-channel-header #content,
-.with-channel-header #sidebar-first,
-.with-channel-header #sidebar-second {
-  margin-top: 145px;
 }
 
 #navbar-inner {
